name:                remorse
version:             0.1.0.0
synopsis:            Yet another attempt at an optimized prelude for certain 
                     ListT/Producer/FreeT operations, here following the ideas of
                     https://github.com/atzeus/reflectionwithoutremorse
license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Remorse.FreeT
                     , Remorse.Free
                     , Remorse.FreeT.Prelude
                     , Remorse.Free.Prelude
                     , Remorse.Of
                     , Remorse.Free.Monadic
                     
                       
  other-extensions:    TupleSections, GADTs, ViewPatterns, TypeOperators, TypeSynonymInstances, FlexibleInstances, ExistentialQuantification, BangPatterns, DeriveFunctor, GeneralizedNewtypeDeriving, LambdaCase, RankNTypes, ScopedTypeVariables, TypeFamilies
  build-depends:       base >=4.6 && <4.9
                       , mtl >=2.1 && <2.4
                       , transformers >=0.3 && <0.5
                       , mmorph 
                       , type-aligned
  default-language:    Haskell2010

